// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should not render if no expenses 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling £
    2.34
  </h2>
</div>
`;

exports[`Should render number of expenses and total value 1`] = `
<div>
  <h2>
    Viewing 
    3
     
    expenses
     totalling £
    12,345.66
  </h2>
</div>
`;
